--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,11 @@ jobs:
     steps:
       - name: Checkout Project
         uses: actions/checkout@v3
+      - name: Extract Branch Name
+        uses: mathiasvr/command-output@v1
+        id: branch
+        with:
+          run: echo ${GITHUB_REF#refs/heads/}
       - name: Install Poetry
         run: pipx install poetry
       - name: Install Python
@@ -37,7 +42,13 @@ jobs:
         with:
           run: poetry version -s
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         with:
-          folder: build/html
-          target-folder: dev/${{ steps.version.outputs.stdout }}
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: _build/html
+          force_orphan: true
+          destination_dir: ${{ steps.branch.outputs.stdout }}/${{ steps.version.outputs.stdout }}
+          enable_jekyll: true
+          allow_empty_commit: true
