--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,15 +13,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       pages: write
       id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout Project
         uses: actions/checkout@v3
       - name: Set branch name
         id: branch
         run: echo "::set-output name=BRANCH_NAME::${GITHUB_REF##*/}"
-        run: echo ${GITHUB_REF#refs/heads/}
       - name: Install Poetry
         run: pipx install poetry
       - name: Install Python
