added deploy action

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,20 +2,22 @@ name: Build and Deploy Site
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
 
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -41,12 +43,11 @@ jobs:
         run: echo "PROJECT_VERSION=$(poetry version -s)" >> $GITHUB_STATE
       - name: Build Site
         run: poetry run sphinx-build -M html source build
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          publish_branch: gh-pages
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: _build/html
-          force_orphan: true
-          destination_dir: ${( steps.branch.outputs.BRANCH_NAME }}/${( steps.version.outputs.PROJECT_VERSION }}
-          allow_empty_commit: true
+          path: build/html
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v1
