--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cs1302-dry"
-version = "0.1.0"
+version = "1.0.0a0"
 description = "DRY examples"
 authors = ["Michael E. Cotterell <mepcott@uga.edu>"]
 license = "CC-BY-NC-SA-4.0"
@@ -12,6 +12,10 @@ classifiers = ["Private :: Do not Upload"]
 python = "^3.11"
 Sphinx = "^6.1"
 furo = "^2022.12.7"
+docutils = "^0.19"
+requests = "^2.28.2"
+requests-cache = "^0.9.8"
+setuptools = "^67.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.0.4"
